[tool.poetry]
name = "proxypool"
version = "0.1.0"
description = ""
authors = ["darr_en1 <zhouttt1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fake-headers = ">=1.0.2,<2.0.0"
loguru = ">=0.7.0,<1.0.0"
aiohttp-retry = ">=2.8.3,<3.0.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.1"
tenacity = ">=8.2.2"
redis = ">=4.3.0,<5.0.0"
environs = ">=9.5.0,<10.0.0"
pyquery = ">=2.0.0,<3.0.0"
supervisor = ">=4.2.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
